# VLM-Robot-Graspnt

./: .gitignore  README.md  README_en.md  README_zh-CN.md  日志.md
docs/: interactive_grasping_vlm_guide.md  readme-gap-analysis.md
docs/superpowers/plans/: 2026-06-05-vlm-text-grasp.md
docs/superpowers/specs/: 2026-06-05-vlm-text-grasp-design.md
graspnet-baseline/: checkpoint-rs.tar_Zone.Identifier
graspnt_robot_executor/: CMakeLists.txt  README.md
graspnt_robot_executor/include/: grasp_executor.h  protocol.h  robot_driver.h  safety_checker.h  udp_server.h
graspnt_robot_executor/src/: grasp_executor.cpp  main.cpp  protocol.cpp  robot_driver.cpp  safety_checker.cpp  udp_server.cpp
graspnt_vlm_rm/: __init__.py  camera_realsense.py  config.py  config.yaml  graspnet_infer.py  mask_filter.py  mask_target.py  run_basic_grasp.py  run_text_vlm_grasp.py  safety.py  transform.py  udp_client.py  video_recorder.py  visualization.py
tests/: test_mask_filter.py  test_mask_target.py  test_target_cloud.py  test_text_vlm_entrypoint.py  test_video_recorder.py  test_visualization_debug_artifacts.py
